--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width-device-width, initial-scale-1.0">
-		<title>Document</title>
-	</head>
-	<body>
-
-	</body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bem vindo a Casa do Microondas</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="inicio">
+            <h1><strong>Casa do Microondas</strong></h1>
+            <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
+        </div>
+        <nav class="navegacao">
+            <a class="navegacao__botao" href="">home</a>
+            <a class="navegacao__botao" href="">localização</a>
+            <a class="navegacao__botao" href="">conserto em 30 minutos</a>   
+            <a class="navegacao__botao" href="">contato</a>
+        </nav>
+    </header>
+    <main>
+        <div class="titulo"><h2 class="marcas">marcas parceiras</h2></div>
+        <div class="logos">
+            <img class="logos_conteudo" src="./img/Logos das marcas.jpg" alt="">
+        </div>
+        <div class="imagem__principal">
+            <img class="imagem__principal__conteudo" src="./img/Cabeçalho (2).png" alt="">
+        </div>
+        <section class="info">
+            <div class="info_coluna">
+                <img class="info_img"  class="info_texto" src="./img/Conserto microondas.jpg" alt="">
+                <p class="info_texto" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam quas consequatur cupiditate sapiente eveniet placeat animi quasi architecto nisi obcaecati. Provident vero molestias enim porro numquam voluptatum soluta expedita. Quasi?</p>
+            </div> 
+            <div class="info_coluna">
+                <img class="info_img" src="./img/Conserto forno eletrico.jpg" alt="">
+                <p class="info_texto" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, optio sunt distinctio illum fugit iure officiis repellat labore! Iste exercitationem voluptatem repudiandae temporibus ipsam repellendus saepe labore? Reiciendis, est optio.</p>
+            </div>
+            <div class="info_coluna">
+                <img class="info_img" src="./img/Reforma de microondas.jpg" alt="">
+                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+            </div>
+        </section>
+        <section class="info">
+            <div class="info_coluna">
+                <img class="info_img" src="./img/Acessórios.jpg" alt="">
+                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+            </div>
+            <div class="info_coluna">
+                <img class="info_img" src="./img/Venda de microondas.jpg" alt="">
+                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+            </div>
+            <div class="info_coluna">
+                <img class="info_img" src="./img/Busca e entrega.jpg" alt="">
+                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+            </div>
+        </section>
+    </main>
+    <footer class="rodape">
+        <div class="rodape_esc">
+            <a class="rodape_botao" href="">Sobre nós</a>
+            <a class="rodape_botao" href="">Contate-nos</a>
+        </div>
+        <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
+    </footer>
+</body>
 </html>
