alteração do index

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem vindo a Casa do Microondas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -22,36 +22,36 @@
     <main>
         <div class="titulo"><h2 class="marcas">marcas parceiras</h2></div>
         <div class="logos">
-            <img class="logos_conteudo" src="./img/Logos das marcas.jpg" alt="">
+            <img class="logos_conteudo" src="./img/logo-marcas.jpg" alt="">
         </div>
         <div class="imagem__principal">
-            <img class="imagem__principal__conteudo" src="./img/Cabeçalho (2).png" alt="">
+            <img class="imagem__principal__conteudo" src="./img/cabecalho.png (2).png" alt="">
         </div>
         <section class="info">
             <div class="info_coluna">
-                <img class="info_img"  class="info_texto" src="./img/Conserto microondas.jpg" alt="">
+                <img class="info_img"  class="info_texto" src="./img/conserto-microondas.jpg" alt="">
                 <p class="info_texto" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam quas consequatur cupiditate sapiente eveniet placeat animi quasi architecto nisi obcaecati. Provident vero molestias enim porro numquam voluptatum soluta expedita. Quasi?</p>
             </div> 
             <div class="info_coluna">
-                <img class="info_img" src="./img/Conserto forno eletrico.jpg" alt="">
+                <img class="info_img" src="./img/conserto-forno-eletrico.jpg" alt="">
                 <p class="info_texto" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, optio sunt distinctio illum fugit iure officiis repellat labore! Iste exercitationem voluptatem repudiandae temporibus ipsam repellendus saepe labore? Reiciendis, est optio.</p>
             </div>
             <div class="info_coluna">
-                <img class="info_img" src="./img/Reforma de microondas.jpg" alt="">
+                <img class="info_img" src="./img/refora-microondas.jpg" alt="">
                 <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
             </div>
         </section>
         <section class="info">
             <div class="info_coluna">
-                <img class="info_img" src="./img/Acessórios.jpg" alt="">
+                <img class="info_img" src="./img/acessorio.jpg" alt="">
                 <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
             </div>
             <div class="info_coluna">
-                <img class="info_img" src="./img/Venda de microondas.jpg" alt="">
+                <img class="info_img" src="./img/venda-microondas.jpg" alt="">
                 <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
             </div>
             <div class="info_coluna">
-                <img class="info_img" src="./img/Busca e entrega.jpg" alt="">
+                <img class="info_img" src="./img/busca-e-entrega.jpg" alt="">
                 <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
             </div>
         </section>
