criação da pasta com as logos atualizadas

--- a/src/html/localization.html
+++ b/src/html/localization.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class="banner">
-            <img class="banner__content" src="./img/banner/banner casa do microondas.png" alt="">
+            <img class="banner__content" src="../img/banner/banner-microondas1.png" alt="">
         </div>
         <h1 class="title">localização</h1>
         <p class="subtitle">Confira a Casa do Microondas mais próxima de você</p>
