--- a/src/html/informations.html
+++ b/src/html/informations.html
@@ -10,18 +10,18 @@
     <header>
         <div class="inicio">
             <h1><strong>Casa do Microondas</strong></h1>
-            <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
+            <button class="botao"> <img class="lua" src="../img/lua.png" alt="">Dark</button>
         </div>
         <nav class="navegacao">
-            <a class="navegacao__botao" href="">home</a>
-            <a class="navegacao__botao" href="">localização</a>
-            <a class="navegacao__botao" href="">conserto em 30 minutos</a>   
-            <a class="navegacao__botao" href="">contato</a>
+            <a class="navegacao_botao" href="./index.html">home</a>
+            <a class="navegacao_botao" href="./localization.html">localização</a>
+            <a class="navegacao_botao" href="">conserto em 30 minutos</a>   
+            <a class="navegacao_botao" href="">contato</a>
         </nav>
     </header>
     <main>
         <div class="banner">
-            <img class="banner__content" src="./img/banner/banner casa do microondas 2.png" alt="">
+            <img class="banner_content" src="../img/banner/banner-microondas2.png" alt="">
         </div>
         <h1 class="title">conserto em 30 minutos</h1>
         <div class="text_info">
@@ -40,7 +40,7 @@
             <h3><li>Não serão avaliados na hora os micro-ondas de Convecção, Fornos Elétricos Fischer Lumen, Fornos Elétricos de Embutir 60L de qualquer marca, maquinas de pão ou qualquer outro aparelho que o técnico julgar necessário mais tempo para avaliação.</li></h3><br>
             <h3>DENTRO DOS 30 MINUTOS ESTÁ INCLUSO A LIMPEZA E HIGIENIZAÇÃO. MAS CASO O APARELHO ESTEJA MUITO ENGORDURADO, COM PÓ INCRUSTADOS OU PRECISE DE CUIDADOS EXTRAS (POLIMENTO, TIRAR MANCHAS, LIMPEZA DOS DUTOS) PODE DEMORAR UM POUCO MAIS.</h3>
             <div class="logo_agradecimento">
-            <img class="logo_branca" src="./img/Logo branca.png" alt="">
+            <img class="logo_branca" src="../img/logo-branca.png" alt="">
             <h3>CONTAMOS COM SUA COMPREENSÃO.</h3>
             </div>
         </div>
