--- a/src/html/localization.html
+++ b/src/html/localization.html
@@ -10,7 +10,7 @@
     <header>
         <div class="inicio">
             <h1><strong>Casa do Microondas</strong></h1>
-            <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
+            <button class="botao"> <img class="lua" src="../img/lua.png" alt="">Dark</button>
         </div>
         <nav class="navegacao">
             <a class="navegacao__botao" href="">home</a>
