manutenção de endereços de imagem, inclusão de links na ancora

--- a/src/html/informations.html
+++ b/src/html/informations.html
@@ -13,15 +13,15 @@
             <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
         </div>
         <nav class="navegacao">
-            <a class="navegacao__botao" href="">home</a>
-            <a class="navegacao__botao" href="">localização</a>
-            <a class="navegacao__botao" href="">conserto em 30 minutos</a>   
+            <a class="navegacao__botao" href="../index.html">home</a>
+            <a class="navegacao__botao" href="../html/localization.html">localização</a>
+            <a class="navegacao__botao" href="informations.html">conserto em 30 minutos</a>   
             <a class="navegacao__botao" href="">contato</a>
         </nav>
     </header>
     <main>
         <div class="banner">
-            <img class="banner__content" src="./img/banner/banner casa do microondas 2.png" alt="">
+            <img class="banner__content" src="../img/banner/banner-microondas2.png" alt="">
         </div>
         <h1 class="title">conserto em 30 minutos</h1>
         <div class="text_info">
