--- a/src/html/localization.html
+++ b/src/html/localization.html
@@ -13,9 +13,9 @@
             <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
         </div>
         <nav class="navegacao">
-            <a class="navegacao__botao" href="">home</a>
-            <a class="navegacao__botao" href="">localização</a>
-            <a class="navegacao__botao" href="">conserto em 30 minutos</a>   
+            <a class="navegacao__botao" href="../index.html">home</a>
+            <a class="navegacao__botao" href="localization.html">localização</a>
+            <a class="navegacao__botao" href="informations.html">conserto em 30 minutos</a>   
             <a class="navegacao__botao" href="">contato</a>
         </nav>
     </header>
