--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
             <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
         </div>
         <nav class="navegacao">
-            <a class="navegacao__botao" href="">home</a>
-            <a class="navegacao__botao" href="">localização</a>
-            <a class="navegacao__botao" href="">conserto em 30 minutos</a>   
+            <a class="navegacao__botao" href="index.html">home</a>
+            <a class="navegacao__botao" href="./html/localization.html">localização</a>
+            <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
             <a class="navegacao__botao" href="">contato</a>
         </nav>
     </header>
@@ -25,7 +25,7 @@
             <img class="logos_conteudo" src="./img/logo-marcas.jpg" alt="">
         </div>
         <div class="imagem__principal">
-            <img class="imagem__principal__conteudo" src="./img/cabecalho.png (2).png" alt="">
+            <img class="imagem__principal__conteudo" src="./img/cabecalho.png" alt="">
         </div>
         <section class="info">
             <div class="info_coluna">
