Arquvos melhor adequados

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="contato.css">
-    <title>Contato</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/contact.css">
+	<title>Contato</title>
 </head>
 <body class="color">
-    <header> 
-        <h1 class="titulo">Casa do Microondas</h1>
-        <div class="tipo">
-            <img src="lu.png" alt="lua">
-            <a href="#">Night</a>
-        </div>
-    </header>
-    <div class="opcoes">
-        <h3><a href="#" class="link">Home</a></h3>
-        <h3><a href="#" class="link">Localização</a></h3>
-        <h3><a href="#" class="link">Fotos</a></h3>
-        <h3><a href="#" class="link">Conserto em 30 minutos</a></h3>
-        <h3><a href="#" class="link">Busca e Entrega</a></h3>
-        <h3><a href="#" class="link">Contato</a></h3>
-    </div> <br>
+	<header>
+		<div class="inicio">
+			<h1><strong>Casa do Microondas</strong></h1>
+			<button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
+		</div>
+		<nav class="navegacao">
+			<a class="navegacao_botao" href="../index.html">home</a>
+			<a class="navegacao_botao" href="./localization.html">localização</a>
+			<a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>
+			<a class="navegacao_botao" href="./contact.html">contato</a>
+		</nav>
+	</header>	
+	 <br>
     <div class="micro">
-        <img src="casa-microondas-front/casa-microondas-front/src/img/banner/banner-microondas3.png" alt="banner">
+        <img src="../img/banner/banner-microondas3.png" alt="banner">
     </div>
-    <p class="cont">
+    <p class="contato">
         CONTATO
     </p>
     <p>
@@ -36,5 +35,5 @@
         <h2 class="top">Nome</h2>
         <h2 class="top">Emaasdasdasdil</h2>
     </div>
-</body>
+	</body>
 </html>
