--- a/src/html/informations.html
+++ b/src/html/informations.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem vindo a Casa do Microondas</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/informations.css">
 </head>
 <body>
     <header>
@@ -13,15 +14,15 @@
             <button class="botao"> <img class="lua" src="../img/lua.png" alt="">Dark</button>
         </div>
         <nav class="navegacao">
-            <a class="navegacao__botao" href="../index.html">home</a>
-            <a class="navegacao__botao" href="../html/localization.html">localização</a>
-            <a class="navegacao__botao" href="informations.html">conserto em 30 minutos</a>   
-            <a class="navegacao__botao" href="">contato</a>
+            <a class="navegacao_botao" href="../index.html">home</a>
+            <a class="navegacao_botao" href="./localization.html">localização</a>
+            <a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>   
+            <a class="navegacao_botao" href="./contact.html">contato</a>
         </nav>
     </header>
     <main>
         <div class="banner">
-            <img class="banner__content" src="../img/banner/banner-microondas2.png" alt="">
+            <img class="banner_content" src="../img/banner/banner-microondas2.png" alt="">
         </div>
         <h1 class="title">conserto em 30 minutos</h1>
         <div class="text_info">
