--- a/src/index.html
+++ b/src/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem vindo a Casa do Microondas</title>
-    <link rel="stylesheet" href="./css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Bem vindo a Casa do Microondas</title>
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/index.html">
 </head>
 <body>
-    <header>
-        <div class="inicio">
-            <h1><strong>Casa do Microondas</strong></h1>
-            <button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
-        </div>
-        <nav class="navegacao">
-            <a class="navegacao__botao" href="index.html">home</a>
-            <a class="navegacao__botao" href="./html/localization.html">localização</a>
-            <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
-            <a class="navegacao__botao" href="">contato</a>
-        </nav>
-    </header>
-    <main>
-        <div class="titulo"><h2 class="marcas">marcas parceiras</h2></div>
-        <div class="logos">
-            <img class="logos_conteudo" src="./img/logo-marcas.jpg" alt="">
-        </div>
-        <div class="imagem__principal">
-            <img class="imagem__principal__conteudo" src="./img/cabecalho.png" alt="">
-        </div>
-        <section class="info">
-            <div class="info_coluna">
-                <img class="info_img"  class="info_texto" src="./img/conserto-microondas.jpg" alt="">
-                <p class="info_texto" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam quas consequatur cupiditate sapiente eveniet placeat animi quasi architecto nisi obcaecati. Provident vero molestias enim porro numquam voluptatum soluta expedita. Quasi?</p>
-            </div> 
-            <div class="info_coluna">
-                <img class="info_img" src="./img/conserto-forno-eletrico.jpg" alt="">
-                <p class="info_texto" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, optio sunt distinctio illum fugit iure officiis repellat labore! Iste exercitationem voluptatem repudiandae temporibus ipsam repellendus saepe labore? Reiciendis, est optio.</p>
-            </div>
-            <div class="info_coluna">
-                <img class="info_img" src="./img/refora-microondas.jpg" alt="">
-                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
-            </div>
-        </section>
-        <section class="info">
-            <div class="info_coluna">
-                <img class="info_img" src="./img/acessorio.jpg" alt="">
-                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
-            </div>
-            <div class="info_coluna">
-                <img class="info_img" src="./img/venda-microondas.jpg" alt="">
-                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
-            </div>
-            <div class="info_coluna">
-                <img class="info_img" src="./img/busca-e-entrega.jpg" alt="">
-                <p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
-            </div>
-        </section>
-    </main>
-    <footer class="rodape">
-        <div class="rodape_esc">
-            <a class="rodape_botao" href="">Sobre nós</a>
-            <a class="rodape_botao" href="">Contate-nos</a>
-        </div>
-        <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
-    </footer>
+	<header>
+		<div class="inicio">
+		<h1><strong>Casa do Microondas</strong></h1>
+		<button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
+		</div>
+		<nav class="navegacao">
+			<a class="navegacao_botao" href="./index.html">home</a>
+			<a class="navegacao_botao" href="./html/localization.html">localização</a>
+			<a class="navegacao_botao" href="./html/informations.html">conserto em 30 minutos</a>   
+			<a class="navegacao_botao" href="./html/contact.html">contato</a>
+		</nav>
+	</header>
+	<main>
+		<div class="titulo"><h2 class="marcas">marcas parceiras</h2></div>
+		<div class="logos">
+			<img class="logos_conteudo" src="./img/logo-marcas.jpg" alt="">
+		</div>
+		<div class="imagem_principal">
+			<img class="imagem_principal_conteudo" src="./img/cabecalho.png" alt="">
+		</div>
+		<section class="info">
+			<div class="info_coluna">
+				<img class="info_img"  class="info_texto" src="./img/conserto-microondas.jpg" alt="">
+				<p class="info_texto" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam quas consequatur cupiditate sapiente eveniet placeat animi quasi architecto nisi obcaecati. Provident vero molestias enim porro numquam voluptatum soluta expedita. Quasi?</p>
+			</div>
+			<div class="info_coluna">
+				<img class="info_img" src="./img/conserto-forno-eletrico.jpg" alt="">
+				<p class="info_texto" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, optio sunt distinctio illum fugit iure officiis repellat labore! Iste exercitationem voluptatem repudiandae temporibus ipsam repellendus saepe labore? Reiciendis, est optio.</p>
+			</div>
+			<div class="info_coluna">
+				<img class="info_img" src="./img/refora-microondas.jpg" alt="">
+				<p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+			</div>
+		</section>
+		<section class="info">
+			<div class="info_coluna">
+				<img class="info_img" src="./img/acessorio.jpg" alt="">
+				<p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+			</div>
+			<div class="info_coluna">
+				<img class="info_img" src="./img/venda-microondas.jpg" alt="">
+				<p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+			</div>
+			<div class="info_coluna">
+				<img class="info_img" src="./img/busca-e-entrega.jpg" alt="">
+				<p class="info_texto" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae maxime, aut magnam commodi laudantium labore debitis dolor pariatur! Doloribus similique voluptates modi. Consequuntur corporis aliquam reprehenderit dolorum nemo repellendus adipisci.</p>
+			</div>
+		</section>
+	</main>
+	<footer class="rodape">
+		<div class="rodape_esc">
+			<a class="rodape_botao" href="">Sobre nós</a>
+			<a class="rodape_botao" href="">Contate-nos</a>
+		</div>
+		<p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
+	</footer>
 </body>
 </html>
