--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,15 @@
         <div class="inicio">
             <h1 class="nome"><strong>Casa do Microondas</strong></h1>
             <nav class="navegacao">
-                <a class="navegacao__botao" href="index.html">home</a>
+                <a class="navegacao__botao" href="./index.html">home</a>
                 <a class="navegacao__botao" href="./html/localization.html">localização</a>
                 <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
-                <a class="navegacao__botao" href="">contato</a>
+                <a class="navegacao__botao" href="./html/contact.html">contato</a>
             </nav>
             <div class="utilidades">
                 <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
                 <a  href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
-                <a href="../src/html/usuario.html"><i id="icon" class="fa-regular fa-user"></i></a>
+                <a href="./html/user.html"><i id="icon" class="fa-regular fa-user"></i></a>
                 <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
