--- a/src/html/localization.html
+++ b/src/html/localization.html
@@ -8,18 +8,25 @@
     <link rel="stylesheet" href="../css/localization.html">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <div class="inicio">
-            <h1><strong>Casa do Microondas</strong></h1>
-            <button class="botao"> <img class="lua" src="../img/lua.png" alt="">Dark</button>
+            <h1 class="nome"><strong>Casa do Microondas</strong></h1>
+            <nav class="navegacao">
+                <a class="navegacao__botao" href="../index.html">home</a>
+                <a class="navegacao__botao" href="./html/localization.html">localização</a>
+                <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
+                <a class="navegacao__botao" href="./contact.html">contato</a>
+            </nav>
+            <div class="utilidades">
+                <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
+                <a  href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="../src/html/user.html"><i id="icon" class="fa-regular fa-user"></i></a>
+                <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
+            </div>
         </div>
-        <nav class="navegacao">
-            <a class="navegacao_botao" href="../index.html">home</a>
-            <a class="navegacao_botao" href="./localization.html">localização</a>
-            <a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>   
-            <a class="navegacao_botao" href="./contacts.html">contato</a>
-        </nav>
-    </header>
+        
+        
+    </header> 
     <main>
         <div class="banner">
             <img class="banner_content" src="../img/banner/banner-microondas1.png" alt="">
