--- a/src/html/user.html
+++ b/src/html/user.html
@@ -16,7 +16,7 @@
                 <a class="navegacao__botao" href="../index.html">home</a>
                 <a class="navegacao__botao" href="./html/localization.html">localização</a>
                 <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
-                <a class="navegacao__botao" href="">contato</a>
+                <a class="navegacao__botao" href="./contact.html">contato</a>
             </nav>
             <div class="utilidades">
                 <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
