CSS foi organizado

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -5,14 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="../css/contact.css">
+	<!-- <link rel="stylesheet" href="../css/contact.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title>Contato</title>
 </head>
-<body class="color">
+<body>
 	<header>
 		<div class="inicio">
 			<h1><strong>Casa do Microondas</strong></h1>
-			<button class="botao"> <img class="lua" src="./img/lua.png" alt="">Dark</button>
+			<button class="botao"> <img class="lua" src="../img/lua.png" alt="">Dark</button>
 		</div>
 		<nav class="navegacao">
 			<a class="navegacao_botao" href="../index.html">home</a>
@@ -20,20 +21,41 @@
 			<a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>
 			<a class="navegacao_botao" href="./contact.html">contato</a>
 		</nav>
-	</header>	
-	 <br>
-    <div class="micro">
-        <img src="../img/banner/banner-microondas3.png" alt="banner">
-    </div>
-    <p class="contato">
-        CONTATO
-    </p>
-    <p>
-        <h2 class="duvida"><strong>Dúvidas? Quer fazer um orçamento? Entre em contato preenchendo esse formulário</strong></h2>
-    </p>
-    <div >
-        <h2 class="top">Nome</h2>
-        <h2 class="top">Emaasdasdasdil</h2>
-    </div>
-	</body>
+	</header>
+	<main>
+	</main>
+	<footer>    
+                <div class="footer_content">
+                        <div class="footer_social">                                  
+                                <h1>Casa do Microondas</h1>
+                                <p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
+                                <div class="social_media">                                                    
+                                        <a href=""><i class="fa-brands fa-instagram"></i></a>                            
+                                        <a href=""><i class="fa-brands fa-twitter"></i></a>          
+                                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                </div>              
+                        </div>                                                                               
+                        <div class="footer_links">                                                       
+                                <div class="links_rapidos">                                                    
+                                        <p>links rápidos</p>                                          
+                                        <li><a href="">About</a></li>
+                                        <li><a href="">My account</a></li>
+                                        <li><a href="">My orders</a></li>
+                                </div>
+                                <div class="links_rapidos">
+                                        <p>Customer Care</p>                                        
+                                        <li><a href="">Contact Us</a></li>
+                                        <li><a href="">FAQs</a></li>
+                                </div>                
+                        </div>                                                    
+                </div>                                     
+                <div class="footer_footer">                           
+                        <div class="rodape_esc">                              
+                                <a class="rodape_botao" href="">Sobre nós</a>
+                                <a class="rodape_botao" href="">Contate-nos</a>                                        
+                        </div>            
+                        <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
+                </div>                                
+        </footer>
+</body>
 </html>
