CSS separado do style, HTML otimizado, ect

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -12,15 +12,20 @@
 <body>
 	<header>
 		<div class="inicio">
-			<h1><strong>Casa do Microondas</strong></h1>
-			<button class="botao"> <img class="lua" src="../img/lua.png" alt="">Dark</button>
+			<h1 class="nome"><strong>Casa do Microondas</strong></h1>
+			<nav class="navegacao">
+				<a class="navegacao_botao" href="../index.html">home</a>
+				<a class="navegacao_botao" href="./localization.html">localização</a>
+				<a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>
+				<a class="navegacao_botao" href="./contact.html">contato</a>
+			</nav>
+			<div class="utilidades">
+				<button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
+				<a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
+				<a href="./account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>
+				<a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
+			</div>
 		</div>
-		<nav class="navegacao">
-			<a class="navegacao_botao" href="../index.html">home</a>
-			<a class="navegacao_botao" href="./localization.html">localização</a>
-			<a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>
-			<a class="navegacao_botao" href="./contact.html">contato</a>
-		</nav>
 	</header>
 	<main>
 	</main>
@@ -30,9 +35,7 @@
                                 <h1>Casa do Microondas</h1>
                                 <p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
                                 <div class="social_media">                                                    
-                                        <a href=""><i class="fa-brands fa-instagram"></i></a>                            
-                                        <a href=""><i class="fa-brands fa-twitter"></i></a>          
-                                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>                            
                                 </div>              
                         </div>                                                                               
                         <div class="footer_links">                                                       
