--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 			<div class="utilidades">
 				<button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
 				<a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
-				<a href="./html/user.html"><i id="icon" class="fa-regular fa-user"></i></a>
+				<a href="./html/account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>
 				<a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
 			</div>
 		</div>
@@ -129,9 +129,7 @@
 				<h1>Casa do Microondas</h1>
 				<p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
 				<div class="social_media">
-					<a href=""><i class="fa-brands fa-instagram"></i></a>
-					<a href=""><i class="fa-brands fa-twitter"></i></a>
-					<a href=""><i class="fa-brands fa-facebook"></i></a>
+					<a href=""><i class="fa-brands fa-whatsapp"></i></a>
 				</div>
 			</div>
 			<div class="footer_links">
