--- a/src/html/account_login.html
+++ b/src/html/account_login.html
@@ -5,28 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem vindo a Casa do Microondas</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/account_login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <p class="mensage">Bem Vindo a Casa do Microondas</p>
     <header class="cabecalho">
         <div class="inicio">
             <h1 class="nome"><strong>Casa do Microondas</strong></h1>
             <nav class="navegacao">
-                <a class="navegacao__botao" href="../index.html">home</a>
-                <a class="navegacao__botao" href="./html/localization.html">localização</a>
-                <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
-                <a class="navegacao__botao" href="./contact.html">contato</a>
+                <a class="navegacao_botao" href="../index.html">home</a>
+                <a class="navegacao_botao" href="./localization.html">localização</a>
+                <a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>   
+                <a class="navegacao_botao" href="./contact.html">contato</a>
             </nav>
             <div class="utilidades">
                 <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
                 <a  href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i id="icon" class="fa-regular fa-user"></i></a>
+                <a href="./account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>
                 <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </div>
-        
-        
     </header> 
     <main>
         <h2 class="minha_conta">Minha Conta</h2>
@@ -36,8 +34,8 @@
                 <label for="nome">Nome de Usuário ou Endereço de Email  *</label>
                 <input type="text" id="nome" name="nome">
                 <label for="senha">Senha *</label>
-                <input type="password" id="senha" name="senha">
-                <div class="formulario_centro">
+		<input type="password" id="senha" name="senha">
+		<div class="formulario_centro">
                     <button type="submit">Conecte-se</button>
                 </div>
             </div>
@@ -59,9 +57,7 @@
                 <h1>Casa do Microondas</h1>
                 <p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
                 <div class="social_media">
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="footer_links">
