--- a/src/html/localization.html
+++ b/src/html/localization.html
@@ -6,27 +6,26 @@
     <title>Bem vindo a Casa do Microondas</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/localization.html">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header class="cabecalho">
-        <div class="inicio">
-            <h1 class="nome"><strong>Casa do Microondas</strong></h1>
-            <nav class="navegacao">
-                <a class="navegacao__botao" href="../index.html">home</a>
-                <a class="navegacao__botao" href="./html/localization.html">localização</a>
-                <a class="navegacao__botao" href="./html/informations.html">conserto em 30 minutos</a>   
-                <a class="navegacao__botao" href="./contact.html">contato</a>
-            </nav>
-            <div class="utilidades">
-                <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
-                <a  href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
-                <a href="../src/html/user.html"><i id="icon" class="fa-regular fa-user"></i></a>
-                <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
-            </div>
-        </div>
-        
-        
-    </header> 
+	<header>
+                <div class="inicio">
+                        <h1 class="nome"><strong>Casa do Microondas</strong></h1>
+                        <nav class="navegacao">
+                                <a class="navegacao_botao" href="../index.html">home</a>
+                                <a class="navegacao_botao" href="./localization.html">localização</a>
+                                <a class="navegacao_botao" href="./informations.html">conserto em 30 minutos</a>
+                                <a class="navegacao_botao" href="./contact.html">contato</a>
+                        </nav>
+                        <div class="utilidades">
+                                <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
+                                <a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
+                                <a href="./account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>
+                                <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
+                        </div>
+                </div>
+        </header>
     <main>
         <div class="banner">
             <img class="banner_content" src="../img/banner/banner-microondas1.png" alt="">
@@ -47,12 +46,36 @@
             </div>    
         </section>
     </main>
-    <footer class="rodape">
-        <div class="rodape_esc">
-            <a class="rodape_botao" href="">Sobre nós</a>
-            <a class="rodape_botao" href="">Contate-nos</a>
-        </div>
-        <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
-    </footer>
+	<footer>    
+                <div class="footer_content">
+                        <div class="footer_social">                                  
+                                <h1>Casa do Microondas</h1>
+                                <p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
+                                <div class="social_media">                                                    
+                                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>                            
+                                </div>              
+                        </div>                                                                               
+                        <div class="footer_links">                                                       
+                                <div class="links_rapidos">                                                    
+                                        <p>links rápidos</p>                                          
+                                        <li><a href="">About</a></li>
+                                        <li><a href="">My account</a></li>
+                                        <li><a href="">My orders</a></li>
+                                </div>
+                                <div class="links_rapidos">
+                                        <p>Customer Care</p>                                        
+                                        <li><a href="">Contact Us</a></li>
+                                        <li><a href="">FAQs</a></li>
+                                </div>                
+                        </div>                                                    
+                </div>                                     
+                <div class="footer_footer">                           
+                        <div class="rodape_esc">                              
+                                <a class="rodape_botao" href="">Sobre nós</a>
+                                <a class="rodape_botao" href="">Contate-nos</a>                                        
+                        </div>            
+                        <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
+                </div>
+	</footer>
 </body>
 </html>
