Página contatos e CSS adicionados e editados

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
-	<!-- <link rel="stylesheet" href="../css/contact.css"> -->
+	<link rel="stylesheet" href="../css/contact.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title>Contato</title>
 </head>
@@ -28,6 +28,22 @@
 		</div>
 	</header>
 	<main>
+		<h2>Envie uma mensagem</h2>
+		<h3>Dúvidas?, Quer fazer um orçamento?, Entre em contato preenchendo esse formulário</h3>
+		<fieldset class="formulario">
+			<div class="conectar">
+				<p><label for="nome">Nome de Usuário ou Endereço de Email  *</label></p>
+				<input type="text" id="nome" name="nome">
+				<p><label for="subject">Assunto *</label></p>
+				<input type="text" id="subjet" name="subject">
+				<p><label for="telephone">Telefone *</label></p>
+				<input type="tel" id="telephone" name="telephone">
+				<p><label for="message">Mensagem *</label></p>
+				<input class="message" type="text" id="message" name="message">
+				<div class="formulario_centro">
+					<button type="submit">Enviar</button>
+				</div>
+			</div>    
 	</main>
 	<footer>    
                 <div class="footer_content">
