adição de rem e menu lateral

--- a/src/html/localization.html
+++ b/src/html/localization.html
@@ -19,7 +19,7 @@
                                 <a class="navegacao_botao" href="./contact.html">contato</a>
                         </nav>
                         <div class="utilidades">
-                                <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>
+                                <button class="botao"><i id="icon_moon" class="fa-regular fa-moon"></i>   Night</button>
                                 <a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
                                 <a href="./account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>
                                 <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
@@ -77,5 +77,6 @@
                         <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
                 </div>
 	</footer>
+        <script type="text/javascript" src="../script.js"></script>
 </body>
 </html>
